--- a/assets/html/partials/sections/landing/showreal.njk
+++ b/assets/html/partials/sections/landing/showreal.njk
@@ -4,9 +4,10 @@
       <h2 class="cs--landing-showreal__title">Our showreal</h2>
       <p class="cs--landing-showreal__comment">Neque enim fermentum pellentesque est. Gravida elementum, condimentum vitae amet, in nam.</p>
       <div class="cs--landing-showreal__video-wrapper">
-        <button type="button">
+        <iframe class="cs--landing-showreal__video" width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/jQvwAS-bamI?enablejsapi=1&fs=1&rel=0&showinf0=0&start=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        {# <button type="button">
           <img src="./img/btn-play.svg" alt="">
-        </button>
+        </button> #}
       </div>
       <a href="javascript:void(0)" class="cs--btn cs--btn-grad-blue">Create Your Free Account</a>
     </div>
