--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -8,6 +8,8 @@
 @import 'benefits';
 @import 'grad-list';
 @import 'card-list';
-@import 'details';
+@import 'details-list';
+@import 'social-list';
+@import 'icon';
 @import 'landing/header';
 @import 'landing/footer';
