add registration pages

--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -3,14 +3,18 @@
       {
         'title': 'Registration - Create account',
         'href': 'registration-create-account.html'
-      },
-      {
+      }, {
         'title': 'Registration - Verify email',
         'href': 'registration-verify-email.html'
-      },
-      {
-        'title': 'Landing',
-        'href': 'landing.html'
+      }, {
+        'title': '2 Factor Authentication',
+        'href': 'registration-auth.html'
+      }, {
+        'title': 'Forgot Passwprd',
+        'href': 'registration-forgot-pass.html'
+      }, {
+        'title': 'Sing In',
+        'href': 'registration-sing-in.html'
       }
     ]
   %}
