--- a/assets/html/registration-auth.njk
+++ b/assets/html/registration-auth.njk
@@ -2,17 +2,17 @@
 
 {%
   set form = {
-    id: 'verify-account'
+    id: 'factor-auth'
   }
 %}
 
 {%
   set inputs = [
     {
-      'name': form.id + '-' + 'verify-code',
+      'name': form.id + '-' + 'auth',
       'type': 'password',
       'icon': 'lock-open',
-      'placeholder': 'Enter Code'
+      'placeholder': 'Google Authenicator Code'
     }
   ]
 %}
@@ -22,7 +22,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>CryptoSystem - Verify account</title>
+    <title>CryptoSystem - 2 Factor Authentication</title>
     <link
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>₿</text></svg>"
@@ -42,7 +42,7 @@
           <a href="javascript:void(0)" class="cs--logo cs--logo-lg">
             <img src="./img/logo.png" alt="logo">
           </a>
-          <h1 class="cs--page__title">Enter the code from E-mail</h1>
+          <h1 class="cs--page__title">2 Factor Authentication</h1>
           <form id="{{ form.id }}" class="cs--reg-form">
             {% for input in inputs %}
               <label for="{{ input.name }}" class="cs--reg-form__input-wrapper">
@@ -50,8 +50,9 @@
                 <input id="{{ input.name }}" type="{{ input.type }}" class="cs--reg-form__input" placeholder="{{ input.placeholder }}">
               </label>
             {% endfor %}
-            <button type="submit" class="cs--btn cs--btn-grad-blue">Confirm registration</button>
+            <button type="submit" class="cs--btn cs--btn-grad-blue">Confirm</button>
           </form>
+          <div class="cs--form-support">Lost your <a href="javascript:void(0)">Google Authenticator Access?</a></div>
         </div>
       </div>
     </main>
