--- a/assets/html/registration-create-account.njk
+++ b/assets/html/registration-create-account.njk
@@ -57,7 +57,7 @@
       </div>
       <div class="cs--container">
         <div class="cs--page__wrapper">
-          <a href="javascript: void(0)" class="cs--logo cs--logo-lg">
+          <a href="javascript:void(0)" class="cs--logo cs--logo-lg">
             <img src="./img/logo.png" alt="logo">
           </a>
           <h1 class="cs--page__title">Create your free account</h1>
@@ -73,7 +73,7 @@
                 <input id="create-acc-privacy" type="checkbox" class="cs--reg-form__checkbox">
                 {{ icon('check') }}
               </label>
-              <div>I agree to the Terms of Service and have read and acknowledge the <a href="javascript: void(0)">
+              <div>I agree to the Terms of Service and have read and acknowledge the <a href="javascript:void(0)">
                   <b>Privacy Statement</b>
                 </a>.</div>
             </div>
@@ -83,9 +83,7 @@
             </div>
             <button type="submit" class="cs--btn cs--btn-grad-blue">Create Account</button>
           </form>
-          <div class="cs--sing-in">
-          Already have an account? <a href="javascript: void(0)">Sign in</a>
-          </div>
+          <div class="cs--form-support">Already have an account? <a href="registration-sing-in.html">Sign in</a></div>
         </div>
       </div>
     </main>
