--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -7,14 +7,23 @@
         'title': 'Registration - Verify email',
         'href': 'registration-verify-email.html'
       }, {
-        'title': '2 Factor Authentication',
+        'title': 'Registration - Sing In',
+        'href': 'registration-sing-in.html'
+      }, {
+        'title': 'Registration - 2 Factor Authentication',
         'href': 'registration-auth.html'
       }, {
-        'title': 'Forgot Passwprd',
+        'title': 'Registration - Forgot Passwprd',
         'href': 'registration-forgot-pass.html'
       }, {
-        'title': 'Sing In',
-        'href': 'registration-sing-in.html'
+        'title': 'Registration - Reset Google Authenticator',
+        'href': 'registration-reset-auth.html'
+      }, {
+        'title': 'Registration - Reset Google Authenticator - 2',
+        'href': 'registration-reset-auth-2.html'
+      }, {
+        'title': 'Landing',
+        'href': 'landing.html'
       }
     ]
   %}
