--- a/assets/scss/abstracts/variables.scss
+++ b/assets/scss/abstracts/variables.scss
@@ -79,6 +79,7 @@ $media-expressions: (
   --color-blue-80: hsl(221, 93%, 12%);
   --color-blue-90: hsl(220, 92%, 10%);
   --color-blue-100: hsl(222, 89%, 7%);
+  --color-orange-50: hsl(22, 90%, 59%);
 
   --grad-blue: linear-gradient(86.88deg, #00c6fb 1.95%, #005bea 97.83%);
   --grad-orange: linear-gradient(271.95deg, #fb7e37 14.29%, #ff9a44 98.96%);
