--- a/assets/scss/pages/registration.scss
+++ b/assets/scss/pages/registration.scss
@@ -15,6 +15,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      max-width: 460px;
+      margin: 0 auto;
     }
     &__title {
       margin: 30px 0 90px;
@@ -24,6 +26,23 @@
       @include media('<xs') {
         margin: 30px 0 30px;
         font-size: 24px;
+      }
+    }
+    &__content {
+      display: flex;
+      flex-direction: column;
+      max-width: 450px;
+      margin-bottom: 30px;
+      font-size: 14px;
+      font-family: var(--font-secondary);
+      line-height: 1.4;
+      &-image {
+        align-self: center;
+        margin-bottom: 45px;
+      }
+      &-accent {
+        color: var(--color-orange-50);
+        font-weight: 700;
       }
     }
   }
@@ -42,6 +61,7 @@
     z-index: 1;
   }
   .cs--btn {
+    align-self: stretch;
     margin-top: 10px;
   }
 }
