add free trading page

--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -24,6 +24,9 @@
       }, {
         'title': 'Landing',
         'href': 'landing.html'
+      }, {
+        'title': 'Trade for FREE with CryptoSystem',
+        'href': 'free-trade.html'
       }
     ]
   %}
