--- a/assets/html/partials/sections/landing/hero.njk
+++ b/assets/html/partials/sections/landing/hero.njk
@@ -19,7 +19,7 @@
 
 <section class="cs--section cs--landing-hero">
   <div class="cs--section__bg">
-    <img src="./img/registration-bg.jpg" alt="">
+    <img src="./img/registration-bg.svg" alt="">
   </div>
   <div class="cs--container">
     <div class="cs--landing-hero__decor">
