--- a/assets/html/registration-sing-in.njk
+++ b/assets/html/registration-sing-in.njk
@@ -41,7 +41,7 @@
     <div class="cs--preloader" data-preloader></div>
     <main class="cs--page cs--page--registration">
       <div class="cs--page__bg">
-        <img src="./img/registration-bg.jpg" alt="">
+        <img src="./img/registration-bg.svg" alt="">
       </div>
       <div class="cs--container">
         <div class="cs--page__wrapper">
