--- a/assets/scss/base/reset.scss
+++ b/assets/scss/base/reset.scss
@@ -20,6 +20,7 @@ body {
   background: var(--base-background-color);
   color: var(--base-text-color);
   font-size: var(--base-font-size);
+  scroll-behavior: smooth;
   &.fixed {
     overflow: hidden;
   }
