add contact us page

--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -27,6 +27,9 @@
       }, {
         'title': 'Trade for FREE with CryptoSystem',
         'href': 'free-trade.html'
+      }, {
+        'title': 'Contact Us',
+        'href': 'contact-us.html'
       }
     ]
   %}
