--- a/assets/html/free-trade.njk
+++ b/assets/html/free-trade.njk
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>CryptoSystem - Landing</title>
+    <title>CryptoSystem - Trade for free</title>
     <link
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>₿</text></svg>"
@@ -21,10 +21,10 @@
         </div>
         <div class="cs--container">
           <div class="cs--landing-free-trade__wrapper">
-            <div class="cs--landing-free-trade__content">
+            <h1 class="cs--landing-free-trade__content">
               <span class="cs--landing-free-trade__content--accent">Trade for FREE</span>
               <span>with CryptoSystem</span>
-            </div>
+            </h1>
             <div class="cs--landing-free-trade__decor">
               <img src="./img/free-trade-img.svg" alt="">
             </div>
