--- a/assets/scss/pages/free-trade.scss
+++ b/assets/scss/pages/free-trade.scss
@@ -22,6 +22,7 @@
     display: flex;
     flex-wrap: wrap;
     padding-left: 110px;
+    margin: 0;
     font-weight: 800;
     font-size: 48px;
     @include media('<xlg') {
