--- a/assets/scss/pages/landing/section-acquaintance.scss
+++ b/assets/scss/pages/landing/section-acquaintance.scss
@@ -51,5 +51,8 @@
         padding: 0 var(--container-padding);
       }
     }
+    .cs--circle-blocks-wrapper {
+      display: none;
+    }
   }
 }
