--- a/assets/scss/pages/landing/section-bring-trading.scss
+++ b/assets/scss/pages/landing/section-bring-trading.scss
@@ -27,6 +27,7 @@
         font-size: 32px;
       }
       @include media('<xs') {
+        margin-bottom: 30px;
         font-size: 28px;
       }
     }
