--- a/assets/scss/pages/landing/section-showreal.scss
+++ b/assets/scss/pages/landing/section-showreal.scss
@@ -18,6 +18,7 @@
         font-size: 32px;
       }
       @include media('<xs') {
+        margin-bottom: 30px;
         font-size: 28px;
       }
     }
