--- a/assets/html/partials/components/landing/footer.njk
+++ b/assets/html/partials/components/landing/footer.njk
@@ -127,7 +127,7 @@
                   <ul class="cs--landing-footer__menu-list">
                     {% for item in groupMenu.itemList %}
                       <li class="cs--landing-footer__menu-item">
-                        <a href="{{ item.link }}">{{ item.title }}</a>
+                        <a class="cs--landing-footer__menu-item-link" href="{{ item.link }}">{{ item.title }}</a>
                       </li>
                     {% endfor %}
                   </ul>
