add coming soon page

--- a/assets/html/contact-us.njk
+++ b/assets/html/contact-us.njk
@@ -69,7 +69,7 @@
               {{ socialList(socItemList) }}
             </div>
             <div class="cs--landing-contact-us__map">
-              <img src="./img/contact-map.jpg" alt="">
+              <img src="./img/examples/contact-map.jpg" alt="">
             </div>
           </div>
         </div>
