--- a/assets/html/partials/sections/landing/bring-trading.njk
+++ b/assets/html/partials/sections/landing/bring-trading.njk
@@ -25,7 +25,7 @@
         {{ gradList(itemList) }}
         <form class="cs--landing-bring-trading__form">
           <label for="bring-trading-email" class="cs--reg-form__input-wrapper">
-            {{ icon('mail') }}
+            <div class="cs--reg-form__input-icon">{{ icon('mail') }}</div>
             <input id="bring-trading-email" type="email" class="cs--reg-form__input" placeholder="Enter Your E-mail">
           </label>
           <button type="submit" class="cs--btn cs--btn-grad-blue">Sign Up</button>
