--- a/assets/html/partials/sections/landing/news.njk
+++ b/assets/html/partials/sections/landing/news.njk
@@ -6,19 +6,19 @@
     'date': 'MARCH 17, 2021',
     'commentsCount': '10',
     'link': 'javascript:void(0)',
-    'imgSrc': './img/news-1.png'
+    'imgSrc': './img/examples/news-1.png'
   }, {
     'title': 'Odio at iaculis in arcu leo consequat',
     'date': 'MARCH 17, 2021',
     'commentsCount': '10',
     'link': 'javascript:void(0)',
-    'imgSrc': './img/news-2.png'
+    'imgSrc': './img/examples/news-2.png'
   }, {
     'title': 'Nisl pulvinar urna id libero sit tellus',
     'date': 'MARCH 17, 2021',
     'commentsCount': '10',
     'link': 'javascript:void(0)',
-    'imgSrc': './img/news-3.png'
+    'imgSrc': './img/examples/news-3.png'
   }
 ] %}
 
