--- a/assets/scss/components/landing/footer.scss
+++ b/assets/scss/components/landing/footer.scss
@@ -53,6 +53,9 @@
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px 10px;
     padding-top: 10px;
+    @include media('<md') {
+      grid-template-columns: repeat(3, 1fr);
+    }
     @include media('<sm') {
       grid-template-columns: repeat(2, 1fr);
     }
