--- a/assets/scss/components/reg-form.scss
+++ b/assets/scss/components/reg-form.scss
@@ -10,12 +10,13 @@
     &:not(:last-child) {
       margin-bottom: 15px;
     }
-    .cs--icon {
-      position: absolute;
-      top: 50%;
-      left: 20px;
-      transform: translateY(-50%);
-    }
+  }
+  &__input-icon {
+    position: absolute;
+    top: 50%;
+    left: 20px;
+    display: flex;
+    transform: translateY(-50%);
   }
   &__checkbox-wrapper {
     --icon-color: var(--color-blue-40);
@@ -29,8 +30,6 @@
     cursor: pointer;
     .cs--icon {
       position: absolute;
-      width: 100%;
-      height: 100%;
       opacity: 0;
       @include animate(opacity);
     }
@@ -47,7 +46,9 @@
   }
   &__checkbox {
     position: absolute;
-    visibility: hidden;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
     &:checked {
       & ~ .cs--icon {
         opacity: 1;
