--- a/assets/scss/pages/landing/section-acquaintance.scss
+++ b/assets/scss/pages/landing/section-acquaintance.scss
@@ -2,8 +2,8 @@
   &-acquaintance {
     padding: 158px 0 125px;
     @include media('<md') {
-        padding: 60px 0;
-      }
+      padding: 60px 0;
+    }
     &__wrapper {
       display: grid;
       grid-template-columns: 500px 1fr;
@@ -52,7 +52,9 @@
       }
     }
     .cs--circle-blocks-wrapper {
-      display: none;
+      @include media('<md') {
+        display: none;
+      }
     }
   }
 }
