--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -45,6 +45,9 @@
       {
         'title': 'Coming Soon',
         'href': 'dashboard-coming-soon.html'
+      }, {
+        'title': 'FAQ',
+        'href': 'dashboard-faq.html'
       }
     ]
   %}
