add page news. update components

--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -48,6 +48,9 @@
       }, {
         'title': 'FAQ',
         'href': 'dashboard-faq.html'
+      }, {
+        'title': 'News',
+        'href': 'dashboard-news.html'
       }
     ]
   %}
