--- a/assets/scss/components/card-list.scss
+++ b/assets/scss/components/card-list.scss
@@ -24,7 +24,7 @@
     &__content {
       display: flex;
       flex-direction: column;
-      padding: 10px 25px 30px;
+      padding: 15px 25px 30px;
       @include media('<sm') {
         padding: 10px 15px 20px;
       }
@@ -48,11 +48,11 @@
       --meta-item-separator-size: 3px;
       --meta-item-separator-space: 10px;
       margin-bottom: 15px;
+      color: var((--color-grey-30));
+      font-size: 10px;
+      line-height: 1.4;
+      text-transform: uppercase;
       & > * {
-        color: var((--color-grey-30));
-        font-size: 10px;
-        line-height: 1.4;
-        text-transform: uppercase;
         &:not(:last-child) {
           position: relative;
           padding-right: calc(var(--meta-item-separator-space) + var(--meta-item-separator-size));
@@ -77,6 +77,7 @@
       line-height: 1.4;
     }
     &__link {
+      align-self: flex-start;
       margin-top: auto;
       font-size: 12px;
       text-decoration: underline;
