--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -11,6 +11,7 @@
 @import 'details-list';
 @import 'social-list';
 @import 'icon';
+@import 'card-filter';
 @import 'landing/header';
 @import 'landing/footer';
 @import 'dashboard/footer';
